--- a/style/stylech.css
+++ b/style/stylech.css
@@ -12,18 +12,91 @@
     max-height: 200px;
     border-radius: 10px;
     color: rgb(10, 79, 10);
+    div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        max-height: 100%;
+    }
     img {
         max-width: 50%;
         max-height: 100%;
         border-radius: 10px 0 0 10px;
         padding: 0 10px 0 0;
     }
+    h2{
+        width: 100%;
+        margin: 0;
+    }
+    a {
+        background-color: green;
+        color: white;
+        border-radius: 10px;
+        padding: 3px 15px;
+        text-decoration: none;
+    }
 }
 
-h2{
-    margin: 10% 0 10% 0;
-}
 
 .textColorRed{
     color: red;
+}
+.modal-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(211, 237, 211, 0.656);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-loader.active{
+    display: flex;
+}
+
+.loader {
+  width: fit-content;
+  font-size: 17px;
+  font-family: monospace;
+  line-height: 1.4;
+  font-weight: bold;
+  --c: no-repeat linear-gradient(#000 0 0); 
+  background: var(--c),var(--c),var(--c),var(--c),var(--c),var(--c),var(--c);
+  background-size: calc(1ch + 1px) 100%;
+  border-bottom: 10px solid #0000; 
+  position: relative;
+  animation: l8-0 3s infinite linear;
+  clip-path: inset(-20px 0);
+}
+.loader::before {
+  content:"Loading";
+}
+.loader::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 14px;
+  background: #25adda;
+  left: -10px;
+  bottom: 100%;
+  animation: l8-1 3s infinite linear;
+}
+@keyframes l8-0{
+   0%,
+   12.5% {background-position: calc(0*100%/6) 0   ,calc(1*100%/6)    0,calc(2*100%/6)    0,calc(3*100%/6)    0,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
+   25%   {background-position: calc(0*100%/6) 40px,calc(1*100%/6)    0,calc(2*100%/6)    0,calc(3*100%/6)    0,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
+   37.5% {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6)    0,calc(3*100%/6)    0,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
+   50%   {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6)    0,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
+   62.5% {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6) 40px,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
+   75%   {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6) 40px,calc(4*100%/6) 40px,calc(5*100%/6)    0,calc(6*100%/6) 0}
+   87.4% {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6) 40px,calc(4*100%/6) 40px,calc(5*100%/6) 40px,calc(6*100%/6) 0}
+   100%  {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6) 40px,calc(4*100%/6) 40px,calc(5*100%/6) 40px,calc(6*100%/6) 40px}
+}
+@keyframes l8-1{
+  100% {left:115%}
 }
